@@ -1,1 +1,3 @@
 # CRM
+
+.\jre7_32\bin\java -Djava.util.Arrays.useLegacyMergeSort=true -Xms512m -Xmx512m -XX:MaxPermSize=128m -jar ".\lib\Order Repertory Management.jar"
